@@ -136,7 +136,7 @@
 	  length         NMTOKEN  3200
 	  volume         NMTOKEN  0.2
 	  sync           CDATA    "false"
-	  sync-mode      CDATA    #IMPLIED
+	  sync-point     CDATA    #IMPLIED
 	  >
 
 <!-- effect pad -->
